test/sema/uninferred_type_show_to_user.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo<T>(f: (T) -> T): (T) -> T {
  return f;
}

fn main(): unit {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify 'number' with '(_) -> _'
  foo(1);
}